package com.graph.apollo.utils

object TestTags {
    const val CHARACTERS_LAZY_COLUMN = "Characters lazy column"

    const val SEARCH_FIELD = "Search field"

    const val SEARCH_BUTTON = "Search button"
}