...
            singleLine = true,
            trailingIcon = {
                IconButton(modifier = Modifier.testTag(TestTags.SEARCH_BUTTON), onClick = {
                    onSearchButtonClick(text)
                }) {

                    Icon(painter = rememberVectorPainter(image = Icons.Filled.Search), contentDescription = "Search")
                }
            }
        )
    }
}

...
